--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,7 +40,11 @@ android {
 
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc:3.11.4'
+        if (osdetector.os == "osx") {
+            artifact = 'com.google.protobuf:protoc:3.11.4:osx-x86_64'
+        } else {
+            artifact = 'com.google.protobuf:protoc:3.11.4'
+        }
     }
     generateProtoTasks {
         all().each { task ->
